chore (image): added ci. clean up unused code and comments
- Removed redundant code blocks to enhance readability.
- Deleted outdated comments that no longer reflect the current implementation.
- Streamlined the codebase for easier maintenance and future development.

--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -1,7 +1,9 @@
-FROM python:3.13-slim
+# Build stage
+FROM python:3.13-slim AS builder
 
 ENV DEBIAN_FRONTEND=noninteractive
 ENV PYTHONUNBUFFERED=1
+ENV UV_COMPILE_BYTECODE=1 UV_LINK_MODE=copy
 
 WORKDIR /app
 
@@ -9,53 +11,86 @@ ARG EXTRAS
 ARG HF_PRECACHE_DIR
 ARG HF_TKN_FILE
 
+# Install build dependencies
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends \
-        ffmpeg \
-        git \
-        build-essential \
-        python3-dev && \
-    rm -rf /var/lib/apt/lists/*
+  apt-get install -y --no-install-recommends \
+  git \
+  build-essential && \
+  rm -rf /var/lib/apt/lists/*
 
-# Install CPU-only PyTorch
-RUN pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+# Copy uv binary from official image
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
-COPY . .
+# # Install CPU-only PyTorch
+# RUN --mount=type=cache,target=/root/.cache/uv \
+#   uv pip install torch torchaudio
 
-# Install WhisperLiveKit directly, allowing for optional dependencies
-RUN if [ -n "$EXTRAS" ]; then \
-      echo "Installing with extras: [$EXTRAS]"; \
-      pip install --no-cache-dir whisperlivekit[$EXTRAS]; \
-    else \
-      echo "Installing base package only"; \
-      pip install --no-cache-dir whisperlivekit; \
-    fi
+# Copy only necessary files for dependency resolution
+COPY pyproject.toml uv.lock ./
 
-# Enable in-container caching for Hugging Face models
+# Install dependencies without the project itself (for better caching)
+RUN --mount=type=cache,target=/root/.cache/uv \
+  uv sync --frozen --no-install-project
+
+# Copy the source code
+COPY whisperlivekit ./whisperlivekit
+
+# Sync the project with optional extras
+RUN --mount=type=cache,target=/root/.cache/uv \
+  if [ -n "$EXTRAS" ]; then \
+  echo "Installing with extras: $EXTRAS"; \
+  uv sync --frozen --extra "$EXTRAS"; \
+  else \
+  echo "Installing base package only"; \
+  uv sync --frozen; \
+  fi
+
+# Copy pre-cached models if provided
+RUN mkdir -p /root/.cache/huggingface
+RUN if [ -n "$HF_PRECACHE_DIR" ]; then \
+  echo "Copying Hugging Face cache from $HF_PRECACHE_DIR"; \
+  mkdir -p /root/.cache/huggingface/hub && \
+  cp -r $HF_PRECACHE_DIR/* /root/.cache/huggingface/hub; \
+  else \
+  echo "No local Hugging Face cache specified, skipping copy"; \
+  fi
+
+# Copy Hugging Face token if provided
+RUN if [ -n "$HF_TKN_FILE" ]; then \
+  echo "Copying Hugging Face token from $HF_TKN_FILE"; \
+  mkdir -p /root/.cache/huggingface && \
+  cp $HF_TKN_FILE /root/.cache/huggingface/token; \
+  else \
+  echo "No Hugging Face token file specified, skipping token setup"; \
+  fi
+
+# Runtime stage
+FROM python:3.13-slim
+
+ENV DEBIAN_FRONTEND=noninteractive
+ENV PYTHONUNBUFFERED=1
+
+WORKDIR /app
+
+# Install only runtime dependencies
+RUN apt-get update && \
+  apt-get install -y --no-install-recommends \
+  ffmpeg \
+  ca-certificates && \
+  rm -rf /var/lib/apt/lists/*
+
+# Copy virtual environment from builder
+COPY --from=builder /app/.venv /app/.venv
+ENV PATH="/app/.venv/bin:$PATH"
+
+# Copy Hugging Face cache from builder (if exists)
+COPY --from=builder /root/.cache/huggingface /root/.cache/huggingface
+
+# Make the cache directory persistent via volume
 VOLUME ["/root/.cache/huggingface/hub"]
 
-# Conditionally copy a local pre-cache from the build context
-RUN if [ -n "$HF_PRECACHE_DIR" ]; then \
-      echo "Copying Hugging Face cache from $HF_PRECACHE_DIR"; \
-      mkdir -p /root/.cache/huggingface/hub && \
-      cp -r $HF_PRECACHE_DIR/* /root/.cache/huggingface/hub; \
-    else \
-      echo "No local Hugging Face cache specified, skipping copy"; \
-    fi
-
-# Conditionally copy a Hugging Face token if provided
-RUN if [ -n "$HF_TKN_FILE" ]; then \
-      echo "Copying Hugging Face token from $HF_TKN_FILE"; \
-      mkdir -p /root/.cache/huggingface && \
-      cp $HF_TKN_FILE /root/.cache/huggingface/token; \
-    else \
-      echo "No Hugging Face token file specified, skipping token setup"; \
-    fi
-    
-# Expose port for the transcription server
 EXPOSE 8000
 
 ENTRYPOINT ["whisperlivekit-server", "--host", "0.0.0.0"]
 
-# Default args - you might want to use a smaller model for CPU
 CMD ["--model", "tiny"]
