--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -44,6 +44,10 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          buildkitd-flags: |
+            --oci-worker-gc=true
+            --oci-worker-gc-keepstorage=20GB
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
