ci(docker): 🐳 comment out unused Dockerfile.cpu configuration
- Removed Dockerfile.cpu and its suffix from the build matrix.
- This change simplifies the build process by eliminating unnecessary configurations.

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -21,8 +21,8 @@ jobs:
         include:
           - dockerfile: Dockerfile
             suffix: ""
-          - dockerfile: Dockerfile.cpu
-            suffix: "-cpu"
+          # - dockerfile: Dockerfile.cpu
+          #   suffix: "-cpu"
 
     steps:
       - name: Checkout repository
